--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -14,6 +14,7 @@
 
 .hero.is-fullheight-with-navbar-twice {
     min-height: calc(100vh - 7.6rem);
+    padding-top: 4rem;
 }
 
 a.navbar-item {
@@ -36,11 +37,17 @@ a.navbar-item.is-active,
 }
 
 
-
-.background-image-black-white-beach {
-    background-image: url('../img/black-white-beach.jpg');
+.has-background-image {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
+}
+
+.background-image-black-white-beach {
+    background-image: url('../img/black-white-beach.jpg');
+}
+
+.background-image-black-white-surfer {
+    background-image: url('../img/black-white-surfer.jpg');
 }
