--- a/css/main.css
+++ b/css/main.css
@@ -7138,6 +7138,10 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 .navbar-link.is-active {
   background: none; }
 
+.navbar-menu.is-block {
+  background-color: #7d7d7d !important;
+  border-bottom: 1px solid #dbdbdb; }
+
 .has-navbar-height {
   min-height: 3.25rem; }
 
@@ -7147,8 +7151,28 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   background-position: center;
   background-size: cover; }
 
-.background-image-black-white-beach {
-  background-image: url("../img/black-white-beach.jpg"); }
+.background-image-black-white-two-surfers {
+  background-image: url("../img/black-white-two-surfers.jpg"); }
 
 .background-image-black-white-surfer {
   background-image: url("../img/black-white-surfer.jpg"); }
+
+.title:not(:first-child) {
+  margin-top: 1.5rem; }
+
+.about-portrait {
+  float: right;
+  margin: 1em; }
+
+dl.timeline {
+  display: grid;
+  grid-template: auto / 7em 1fr; }
+
+dl.timeline dt {
+  font-weight: bold;
+  grid-column: 1;
+  text-align: right;
+  padding-right: 1em; }
+
+dl.timeline dd {
+  grid-column: 2; }
