Movies Content & Responsive Design

--- a/css/main.css
+++ b/css/main.css
@@ -7197,6 +7197,21 @@ dl.meta dd {
   grid-column: 2;
   color: #989898; }
 
+.hero-body.movies > .title {
+  color: white;
+  text-transform: uppercase;
+  line-height: 0.8;
+  clear: both;
+  margin-top: 0; }
+
+.hero-body.movies > .subtitle {
+  color: white;
+  clear: both; }
+
+.hero-body.movies > .subtitle small {
+  padding-left: 1.5em;
+  font-size: 0.7em; }
+
 .hero-body.movies .card {
   float: left;
   max-width: 40%;
@@ -7215,9 +7230,33 @@ dl.meta dd {
 .hero-body.movies:after {
   clear: both; }
 
+.image iframe.is-16by9 {
+  width: 560px;
+  height: 315px; }
+
+@media screen and (max-width: 1024px) {
+  .hero-body.movies .card {
+    margin-right: 2em;
+    margin-bottom: 3em;
+    max-width: inherit; }
+  .image iframe.is-16by9 {
+    width: 448px;
+    height: 252px; } }
+
+@media screen and (max-width: 768px) {
+  .image iframe.is-16by9 {
+    width: 560px;
+    height: 315px; } }
+
 @media screen and (max-width: 667px) {
   .hero-body.movies .card {
     display: block;
     float: none;
     margin-right: 0;
+    margin-bottom: 3em;
     max-width: inherit; } }
+
+@media screen and (max-width: 375px) {
+  .image iframe.is-16by9 {
+    width: 320px;
+    height: 180px; } }
