Blurred about background

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -112,6 +112,10 @@ a.navbar-item.is-active,
     background-image: url('../img/black-white-surfer.jpg');
 }
 
+.background-image-black-white-surfer-blurred {
+    background-image: url('../img/black-white-surfer-blurred.jpg');
+}
+
 .title:not(:first-child) {
     margin-top: 1.5rem;
 }
