--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7200,6 +7200,9 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 .background-image-black-white-surfer {
   background-image: url("../img/black-white-surfer.jpg"); }
 
+.background-image-black-white-surfer-blurred {
+  background-image: url("../img/black-white-surfer-blurred.jpg"); }
+
 .title:not(:first-child) {
   margin-top: 1.5rem; }
 
