--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -63,6 +63,8 @@ $navbar-offset: 50%;
 .hero.is-navbar-aligned .hero-body {
     padding-left: 0;
     margin-left: 0;
+    padding-right: 0;
+    margin-right: 0;
 }
 
 .hero-body.movies {
@@ -128,6 +130,7 @@ a.navbar-item.is-active,
 dl.timeline {
 	display: grid;
     grid-template: auto / 7em 1fr;
+    margin-bottom: 2.5em;
 }
 
 dl.timeline dt {
@@ -141,7 +144,7 @@ dl.timeline dd {
     grid-column: 2;
 }
 
-a.download {
+a.bold {
     text-decoration: underline;
     font-weight: bold;
 }
@@ -160,6 +163,23 @@ dl.meta dt {
 dl.meta dd {
     grid-column: 2;
     color: #989898;
+}
+
+ul.is-flex.is-flex-direction-row.is-justify-content-space-between li {
+    flex: 1;
+    text-align: center;
+}
+
+ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:first-child {
+    text-align: left;
+    padding-left: 0;
+    margin-left: 0;
+}
+
+ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:last-child {
+    text-align: right;
+    padding-right: 0;
+    margin-right: 0;
 }
 
 .hero-body.movies > .title {
@@ -229,15 +249,9 @@ dl.meta dd {
 
     .hero.is-navbar-aligned {
         padding-left: $horizontal-inset;
+        padding-right: $horizontal-inset;
     }
 }
-/*
-@media screen and (max-width: 768px) {
-    .image iframe.is-16by9 {
-        width: 560px;
-        height: 315px;
-    }
-}*/
 
 @media screen and (max-width: 667px) {
     .hero-body.movies .card {
