--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7163,7 +7163,9 @@ label.panel-block {
 
 .hero.is-navbar-aligned .hero-body {
   padding-left: 0;
-  margin-left: 0; }
+  margin-left: 0;
+  padding-right: 0;
+  margin-right: 0; }
 
 .hero-body.movies {
   padding-left: 0; }
@@ -7212,7 +7214,8 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 
 dl.timeline {
   display: grid;
-  grid-template: auto / 7em 1fr; }
+  grid-template: auto / 7em 1fr;
+  margin-bottom: 2.5em; }
 
 dl.timeline dt {
   font-weight: bold;
@@ -7223,7 +7226,7 @@ dl.timeline dt {
 dl.timeline dd {
   grid-column: 2; }
 
-a.download {
+a.bold {
   text-decoration: underline;
   font-weight: bold; }
 
@@ -7239,6 +7242,20 @@ dl.meta dt {
 dl.meta dd {
   grid-column: 2;
   color: #989898; }
+
+ul.is-flex.is-flex-direction-row.is-justify-content-space-between li {
+  flex: 1;
+  text-align: center; }
+
+ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:first-child {
+  text-align: left;
+  padding-left: 0;
+  margin-left: 0; }
+
+ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:last-child {
+  text-align: right;
+  padding-right: 0;
+  margin-right: 0; }
 
 .hero-body.movies > .title {
   color: white;
@@ -7291,15 +7308,9 @@ dl.meta dd {
     width: 448px;
     height: 252px; }
   .hero.is-navbar-aligned {
-    padding-left: 2%; } }
+    padding-left: 2%;
+    padding-right: 2%; } }
 
-/*
-@media screen and (max-width: 768px) {
-    .image iframe.is-16by9 {
-        width: 560px;
-        height: 315px;
-    }
-}*/
 @media screen and (max-width: 667px) {
   .hero-body.movies .card {
     display: block;
