--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7298,6 +7298,10 @@ ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:last-child 
   height: 315px; }
 
 @media screen and (max-width: 1080px) {
+  .navbar.is-absolute .navbar-end {
+    position: inherit; }
+  .navbar.is-absolute .navbar-end :first-child {
+    padding-left: 0.5em; }
   .hero-body.movies .card {
     margin-right: 2em;
     margin-bottom: 3em;
@@ -7312,6 +7316,11 @@ ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:last-child 
     padding-right: 2%; } }
 
 @media screen and (max-width: 667px) {
+  ul.is-flex.is-flex-direction-row.is-justify-content-space-between {
+    flex-direction: column !important;
+    align-items: flex-start; }
+  ul.is-flex.is-flex-direction-row.is-justify-content-space-between li {
+    margin-bottom: 1em; }
   .hero-body.movies .card {
     display: block;
     float: none;
