Font adjustments in header

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+html, body {
+    font-family: 'Roboto', sans-serif;
+}
+
 $horizontal-inset: 2%;
 $navbar-offset: 50%;
 
@@ -12,6 +18,14 @@ $navbar-offset: 50%;
 
 .navbar .navbar-item:last-child {
     padding-right: 0;
+}
+
+.navbar.has-background-black h1.title.has-text-white {
+    font-size: 34pt;
+}
+
+.navbar.is-transparent h2.subtitle.has-text-black {
+    font-size: 21pt;
 }
 
 .navbar.is-transparent,
