--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 /*! bulma.io v0.8.2 | MIT License | github.com/jgthms/bulma */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @keyframes spinAround {
   from {
     transform: rotate(0deg); }
@@ -7113,6 +7114,9 @@ label.panel-block {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem; }
 
+html, body {
+  font-family: 'Roboto', sans-serif; }
+
 .navbar {
   margin-left: 2%;
   margin-right: 2%; }
@@ -7122,6 +7126,12 @@ label.panel-block {
 
 .navbar .navbar-item:last-child {
   padding-right: 0; }
+
+.navbar.has-background-black h1.title.has-text-white {
+  font-size: 34pt; }
+
+.navbar.is-transparent h2.subtitle.has-text-black {
+  font-size: 21pt; }
 
 .navbar.is-transparent,
 .navbar.is-transparent .navbar-menu {
