--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7127,10 +7127,10 @@ html, body {
 .navbar .navbar-item:last-child {
   padding-right: 0; }
 
-.navbar.has-background-black h1.title.has-text-white {
+.navbar.has-background-black h1.title {
   font-size: 34pt; }
 
-.navbar.is-transparent h2.subtitle.has-text-black {
+.navbar.is-transparent h2.subtitle {
   font-size: 21pt; }
 
 .navbar.is-transparent,
