--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -20,11 +20,11 @@ $navbar-offset: 45%;
     padding-right: 0;
 }
 
-.navbar.has-background-black h1.title.has-text-white {
+.navbar.has-background-black h1.title {
     font-size: 34pt;
 }
 
-.navbar.is-transparent h2.subtitle.has-text-black {
+.navbar.is-transparent h2.subtitle {
     font-size: 21pt;
 }
 
