--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -117,7 +117,8 @@ a.navbar-item {
     padding-bottom: 1em;
 }
 
-a.navbar-item:hover {
+a.navbar-item:hover,
+a.navbar-item.is-active {
     font-weight: normal;
 }
 
