--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -9,8 +9,8 @@ $navbar-offset: 45%;
 
 i.space{
     font-style: normal;
-    margin-left: 0.5em;
-    margin-right: 0.5em;
+    margin-left: 0.4em;
+    margin-right: 0.4em;
 }
 
 .navbar {
@@ -166,7 +166,13 @@ a.navbar-item.is-active,
 }
 
 .title:not(:first-child) {
-    margin-top: 1.5rem;
+    margin-top: 1.5em;
+    margin-bottom: 0.5em;
+}
+
+.title.is-about {
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .about-portrait {
