--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -324,6 +324,18 @@ ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:last-child 
         height: 252px;
     }
 
+    .hero-body.movies .card .media-content h4 {
+        font-size: 22px;
+    }
+    
+    .hero-body.movies .card .media-content h4 small {
+        font-size: 8px;
+    }
+    
+    .hero-body.movies .card .media-content h5 {
+        font-size: 12px;
+    }
+
     .hero.is-navbar-aligned {
         padding-left: $horizontal-inset;
         padding-right: $horizontal-inset;
@@ -349,7 +361,19 @@ ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:last-child 
     }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 390px) {
+    .hero-body.movies .card .media-content h4 {
+        font-size: 18px;
+    }
+    
+    .hero-body.movies .card .media-content h4 small {
+        font-size: 6px;
+    }
+    
+    .hero-body.movies .card .media-content h5 {
+        font-size: 12px;
+    }
+
     .image iframe.is-16by9 {
         width: 320px;
         height: 180px;
