timeline line-height

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -195,11 +195,16 @@ dl.timeline dt {
 
 dl.timeline dd {
     grid-column: 2;
+    margin-bottom: 0.5em;
 }
 
 a.bold {
     text-decoration: underline;
     font-weight: bold;
+}
+
+dl.meta {
+    display: inline;
 }
 
 dl.meta dt {
