--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7277,10 +7277,12 @@ dl.meta {
   display: inline; }
 
 dl.meta dt {
-  float: left;
-  margin-right: 0.5em; }
+  clear: both;
+  float: left; }
 
 dl.meta dd {
+  float: left;
+  margin-left: 0.5em;
   color: #989898; }
 
 ul.is-flex.is-flex-direction-row.is-justify-content-space-between li {
@@ -7317,8 +7319,7 @@ ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:last-child 
   max-width: 40%;
   margin-right: 10em;
   margin-bottom: 5em;
-  box-shadow: none;
-  min-width: 430px; }
+  box-shadow: none; }
 
 .hero-body.movies .card:nth-child(2n) {
   margin-right: 0; }
