--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -196,6 +196,11 @@ dl.timeline dt {
 dl.timeline dd {
     grid-column: 2;
     margin-bottom: 0.5em;
+    font-weight: 300;
+}
+
+.is-light {
+    font-weight: 300;
 }
 
 a.bold {
