--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7267,7 +7267,11 @@ dl.timeline dt {
 
 dl.timeline dd {
   grid-column: 2;
-  margin-bottom: 0.5em; }
+  margin-bottom: 0.5em;
+  font-weight: 300; }
+
+.is-light {
+  font-weight: 300; }
 
 a.bold {
   text-decoration: underline;
