--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -466,6 +466,10 @@ ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:last-child 
         margin-top: 1em;
         min-height: 600px;
     }
+
+    .gallery-width {
+        width: 100% !important;
+    }
 }
 
 @media screen and (max-width: 667px) {
