--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11717,6 +11717,14 @@ readers do not read off random characters that represent icons */
 html, body {
   font-family: 'Roboto', sans-serif; }
 
+.hero-head.is-brand-aligned {
+  position: absolute;
+  left: 5%;
+  margin-top: 3rem; }
+
+.hero-head.is-brand-aligned > * {
+  width: 420px; }
+
 .navbar .navbar-menu {
     box-shadow: none; }
 
@@ -12039,6 +12047,11 @@ ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:last-child 
   height: 315px; }
 
 @media screen and (max-width: 1080px) {
+  .hero-head.is-brand-aligned {
+    position: inherit;
+    left: inherit; }
+  .hero-head.is-brand-aligned > * {
+    width: 320px; }
   .navbar.is-absolute .navbar-end {
     position: inherit; }
   .navbar.is-absolute .navbar-end :first-child {
