--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12042,6 +12042,9 @@ ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:last-child 
 .hero-body.movies:after {
   clear: both; }
 
+.card-image .image {
+    max-width: 100%; }
+
 .image iframe.is-16by9 {
   width: 560px;
   height: 315px; }
