--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -523,6 +523,10 @@ ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:last-child 
 }
 
 @media screen and (max-width: 390px) {
+    .hero-body.movies {
+        padding-right: 4%;
+    }
+
     .hero-body.movies .card .media-content h4 {
         font-size: 18px;
     }
@@ -537,7 +541,7 @@ ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:last-child 
     }
 
     .image iframe.is-16by9 {
-        width: 320px;
-        height: 180px;
+        width: 90vw;
+        height: calc(90vw / 16 * 9);
     }
 }
