--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12103,6 +12103,8 @@ ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:last-child 
     max-width: inherit; } }
 
 @media screen and (max-width: 390px) {
+  .hero-body.movies {
+    padding-right: 4%; }
   .hero-body.movies .card .media-content h4 {
     font-size: 18px; }
   .hero-body.movies .card .media-content h4 small {
@@ -12111,5 +12113,5 @@ ul.is-flex.is-flex-direction-row.is-justify-content-space-between li:last-child 
     font-size: 12px;
     white-space: normal; }
   .image iframe.is-16by9 {
-    width: 320px;
-    height: 180px; } }
+    width: 90vw;
+    height: calc(90vw / 16 * 9); } }
