--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -262,7 +262,7 @@ th {
     text-align: left; }
 
 html {
-  background-color: #fff;
+  background-color: #0a0a0a;
   font-size: 16px;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
